# Python-Web-projects-functions

./: alembic.ini  authors.json  db.py  logs.txt  models.py  my_select.py  pyproject.toml  quotes.json  seed.py  students.db  uml.drawio
FinalProject/: AddressBook.py  user_interface.py
New_version_project_9/backend/app/: pyproject.toml
New_version_project_9/backend/app/app/: initial_data.py  main.py  utils.py
New_version_project_9/backend/app/app/api/: __init__.py  (+1 more)
New_version_project_9/frontend/src/components/: NotificationsManager.vue
WEB_HW4-main/: contact_us.html  error.html  index.html  main.py  test.txt
WEB_HW4-main/css/: styles_main_page.css
WEB_HW4-main/storage/: wishes.json
WEB_dz_11/: .gitignore  README.md  main.py  pyproject.toml
WEB_dz_11/migrations/: env.py
WEB_dz_11/migrations/versions/: 8df2b706e02f_init.py
WEB_dz_11/src/: valid_schemas.py
WEB_dz_11/src/conf/: config.py
WEB_dz_11/src/database/: db_models.py
WEB_dz_11/src/entity/: models.py
WEB_dz_11/src/repository/: metho_contacts.py  users.py
WEB_dz_11/src/routes/: auth.py  contacts.py  route_contacts.py
WEB_dz_11/src/schemas/: contact.py  user.py
WEB_dz_11/src/services/: auth.py
WEB_dz_12/: main.py  pyproject.toml
WEB_dz_12/migrations/: env.py
WEB_dz_12/migrations/versions/: aa7cbac020e0_init.py  d35604898509_init.py  e58316e0b858_init.py  fce9c54c61fc_init.py
WEB_dz_12/src/: valid_schemas.py
WEB_dz_12/src/database/: db_connection.py  db_models.py
WEB_dz_12/src/repository/: metho_contacts.py  users.py
WEB_dz_12/src/routes/: route_auth.py  route_contacts.py
WEB_dz_12/src/services/: auth.py
alembic/: env.py
dz10_web/: pyproject.toml
dz10_web/dz10_project/: db.sqlite3
dz10_web/dz10_project/dz10_project/: asgi.py  settings.py
dz10_web/dz10_project/quotes/: urls.py  views.py
dz10_web/dz10_project/quotes/migrations/: 0001_initial.py
dz10_web/dz10_project/quotes/templates/quotes/: index.html
dz10_web/dz10_project/utils/: add_quotes_to_mongo.py  authors.json
dz10_web/hw_project/quotes/templates/quotes/: base.html
dz10_web/hw_project/utils/: quotes.json
dz11_12_web/: authentication.py  contacts.py  database.py  main.py  models.py
dz11_web/: main.py
dz14/docs/source/: conf.py  index.rst
dz14/postgres-data/base/13458/: 1247  1259  16390  16395  16406  16417  16418  16425  2604  2620  2659  2662  2663  2665  2666  2667  2673  2674  2678  5002
dz14/postgres-data/global/: pg_internal.init
dz14/postgres-data/pg_stat/: db_13458.stat
dz14/src/repository/: users.py
dz14/test/: test_pytest.py  test_unit_repository_metho_contacts.py  test_unit_repository_users.py
dz14_v01/: main.py  pyproject.toml
dz14_v01/docs/source/: conf.py  index.rst
dz14_v01/migrations/: env.py
dz14_v01/postgres-data/base/13458/: 1249  16393  16397  16403  16404  16408  16409  2224  2579  2606  2608  2610  2656  2657  2658  2664  2679  2699  2701  2702  2703  2704  3455  pg_internal.init
dz14_v01/postgres-data/global/: pg_control
dz14_v01/postgres-data/pg_stat/: db_0.stat  global.stat
dz14_v01/postgres-data/pg_xact/: 0000
dz14_v01/src/: valid_schemas.py
dz14_v01/src/database/: db_connection.py  db_models.py
dz14_v01/src/repository/: metho_contacts.py
dz14_v01/src/routes/: route_auth.py  route_contacts.py  route_users.py
dz14_v01/src/services/: auth.py  email.py
dz14_v01/src/services/templates/: email_template.html
dz14_v01/test/: test_unit_repository_metho_contacts.py
dz3_web/: dz_03_01_web.py  dz_03_02_web.py
dz4_web/: Dockerfile  README.md  error.html  index.html  main.py  message.html  pyproject.toml
dz4_web/front-init-main/: main.py  socket_server.py
dz4_web/storage/: data.json
dz5_web/: main.py
dz6_web/: main.py
dz7_web/: .gitignore  config.ini  pyproject.toml
dz7_web/alembic/versions/: 42e2ed188441_init.py  d586c5d4cb28_data_inserted.py
dz8_web/: README.md  pyproject.toml
dz8_web/part_1/: insert_data.py  main.py
dz8_web/part_2/: consumer.py  model.py  producer.py
dz9_web/: main.py
dz_2/: Dockerfile  pyproject.toml
dz_2/NoteBook_Buddy/: addressbook.py
dz_2/ProjectNotebook/: pyproject.toml
(+23 files in other folders)
