[tool.poetry]
name = "web-hw-12"
version = "0.1.0"
description = ""
authors = ["AlexanderF048 <alexandr.frankevich@gmail.com>"]
readme = "README.md"
packages = [{include = "web_hw_12"}]

[tool.poetry.dependencies]
python = "^3.11"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
fastapi = "^0.92.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
fastapi-jwt-auth = "^0.5.0"
sqlalchemy = "^2.0.4"
passlib = "^1.7.4"
psycopg2 = "^2.9.5"
pydantic = {extras = ["email"], version = "^1.10.5"}
python-multipart = "^0.0.6"
alembic = "^1.9.4"
gravatar = "^0.1"
libgravatar = "^1.0.3"
bcrypt = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
