[tool.poetry]
name = "web-hw7"
version = "0.1.0"
description = ""
authors = ["m1hanch <misha5264@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.22"
psycopg2 = "^2.9.9"
sqlalchemy-utils = "^0.41.1"
faker = "^19.12.0"
alembic = "^1.12.1"
uri = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
